fixed saved motos drag issue on mobile

--- a/src/components/ui/SwipeArrow.css
+++ b/src/components/ui/SwipeArrow.css
@@ -10,7 +10,7 @@
 
 .swipe-arrow {
 	position: relative;
-	top: -28px;
+	top: -75px;
 	width: 40px;
 	opacity: 0.2;
 }
